  to do so however using a new parameter.
  Bugzilla report 33969.
  
* A lock in Project ensured that a BuildListener's messageLogged
  method was only ever executed by a single thread at a time, while
  all other methods could be invoked by multiple threads
  simultaniously (while within <parallel>, for example).  This lock is
  no longer in place, messageLogged should be made thread-safe now.

Fixed bugs:
-----------

 * <symlink> task couldn't overwrite existing symlinks that pointed to nonexistent files
   Bugzilla report 38199.

 * <symlink> task couldn't overwrite files that were in the way of the symlink.
   Bugzilla report 43426.
   
 * <symlink> task failonerror="false" does not stop build from failing when 'ln' 
   command returns non-zero. Bugzilla report 43624  

 * <touch> task couldn't differentiate between "no resources specified" and "no resources
   matched."  Bugzilla report 43799.

 * ManifestClassPath throws when a relative path would traverse the file system root. Bugzilla
   report 44499.

 * <globmapper> had an indexoutofbounds when the prefix and postfix overlapped. Bugzilla report
   44731.
   
 * <typedef> and <taskdef> failed to accept file names with #
   characters in them.
   Bugzilla report 45190

 * A deadlock could occur if a BuildListener tried to access an Ant property
   within messageLogged while a different thread also accessed one.
   Bugzilla report 45194

 * Handle null result of system getProperty() in CommandlineJava.
   Similar to Bugzilla report 42334.

 * Length task did not process nonexistent Resources even though these might
   conceivably still carry file length information.  Bugzilla report 45271.

Other changes:
--------------

 * There is now a FileProvider interface for resources that act as a source
   of filenames. This should be used by tasks that require resources
   to provide filenames, rather than require that all resources
   are instances or subclasses of FileResource.
   Bugzilla report 43348
   