@@ -40,7 +40,7 @@ statements will all be executed as one transaction.</p>
 <p>The <i>onerror</i> attribute specifies how to proceed when an error occurs 
 during the execution of one of the statements. 
 The possible values are: <b>continue</b> execution, only show the error;
-<b>stop</b> execution and commit transaction;
+<b>stop</b> execution, log the error but don't fail the task
 and <b>abort</b> execution and transaction and fail task.</p>
 
 <p>
